# django-db-anonymiser

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY_CHECKLIST.md  database_sanitizer  db_anonymiser  personal-data-exclusions.txt  pii-secret-exclude.txt  pyproject.toml  requirements.txt
.circleci/: config.yaml  config.yml
.github/: CODEOWNERS
.github/workflows/: tests.yml
database_sanitizer/dump/: postgres.py
db_anonymiser/: fake_hmrc.py  faker.py
db_anonymiser/management/commands/: dump_and_anonymise.py
db_anonymiser/tests/: test_command.py  test_faker.py
django_db_anonymiser/database_sanitizer/dump/: __init__.py
django_db_anonymiser/db_anonymiser/: faker.py
django_db_anonymiser/db_anonymiser/management/commands/: _base_helpers.py  _check_migration_fields_helpers.py  check_migration_fields.py  dump_and_anonymise.py
django_db_anonymiser/db_anonymiser/tests/: conftest.py  test_check_migration_fields.py  test_check_migration_fields_helpers.py  test_command.py  test_faker.py
test_project/: anonymise_model_config.yaml  settings.py
